Fix: Google z-index overlaps

--- a/src/background/templates/css/_common.scss
+++ b/src/background/templates/css/_common.scss
@@ -20,7 +20,7 @@ $black: #000;
 .lazy-vaccine {
   position: relative;
   min-width: 300px;
-  z-index: 2201;
+  z-index: 2;
   max-width: 800px;
   margin: 0px auto;
   color: $black;
